# arcdps-axipulse

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASE_NOTES.md
.cargo/: config.toml
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-21-wvw-map-replay-mvp.md  2026-05-22-wvw-map-camera.md  2026-05-22-wvw-map-playback.md  2026-05-22-wvw-map-state-overlays.md  2026-05-23-auto-updater.md
docs/superpowers/specs/: 2026-05-23-auto-updater-design.md
scripts/: deploy.sh  fetch_dotnet.sh  fetch_ei.sh  fetch_tiles.sh
src/: boon_uptime.rs  config.rs  derived.rs  diag.rs  ei_bundle.rs  ei_model.rs  ei_parser.rs  ei_settings.rs  fight_composition.rs  hotkey.rs  lib.rs  plugin.rs  pulse_metrics.rs  self_identify.rs  squad_rank.rs  state.rs  tile_fetcher.rs  timeline_boons.rs  timeline_buckets.rs  timeline_distance.rs  timeline_health.rs  top_heals.rs  top_skills.rs  updater.rs  watcher.rs
src/map/: boon_panel.rs  mod.rs  tiles.rs  wvw.rs
src/ui/: diag.rs  icons.rs  main.rs  map.rs  mod.rs  notifier.rs  options.rs  pulse.rs  tile_cache.rs  timeline.rs
tests/: boon_uptime_test.rs  ei_bundle_test.rs  ei_model_test.rs  ei_settings_test.rs  pulse_metrics_test.rs  self_identify_test.rs  squad_rank_test.rs  timeline_boons_test.rs  timeline_buckets_test.rs  timeline_distance_test.rs  timeline_health_test.rs  top_skills_test.rs  wvw_map_camera_test.rs  wvw_map_lerp_test.rs  wvw_map_replay_parse_test.rs  wvw_map_status_test.rs  wvw_tiles_test.rs  wvw_zone_resolve_test.rs
