[package]
name = "arcdps_axipulse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(windows)'.dependencies]
arcdps = { path = "vendor/arcdps", features = ["extras", "log"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
] }

[dependencies]
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
notify = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
