[package]
name = "arcdps_axipulse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(windows)'.dependencies]
arcdps = { path = "vendor/arcdps", features = ["extras", "log"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[dependencies]
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
notify = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ureq = { version = "2", default-features = false, features = ["tls"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
